launch_template.tf
resource "aws_launch_template" "ec2_lt_public" {
  name_prefix   = "LT_"
  description   = "LC for EC2 instances"
  image_id      = "ami-07761f3ae34c4478d"
  instance_type = "t2.micro"
  key_name      = "mykeypair"
  // you need to use base644encode to run user_data. Use command base64 -w 0 ec2_bash_script.sh
  user_data = "IyEgL2Jpbi9iYXNoCiMgbmVlZHMgdG8gY29weSBwYXN0ZWQgZXhhY3RseSBsaWtlIHRoaXMsIGZvciBzb21lIHJlYXNvbiB0aGUgd2dldCBuZWVkcyB0byBiZSBlbnRlcmVkIHRoaXMgZXhhY3Qgd2F5CgpzdWRvIHl1bSB1cGRhdGUgLXkKCnN1ZG8gd2dldCAtTyAvZXRjL3l1bS5yZXBvcy5kL2plbmtpbnMucmVwbyBcCiAgICBodHRwczovL3BrZy5qZW5raW5zLmlvL3JlZGhhdC1zdGFibGUvamVua2lucy5yZXBvCgpzdWRvIHJwbSAtLWltcG9ydCBodHRwczovL3BrZy5qZW5raW5zLmlvL3JlZGhhdC1zdGFibGUvamVua2lucy5pby0yMDIzLmtleQoKc3VkbyB5dW0gdXBncmFkZQoKc3VkbyB5dW0gaW5zdGFsbCBqYXZhLTE3LWFtYXpvbi1jb [...]

  depends_on = [aws_vpc.my_vpc]

  network_interfaces {
    associate_public_ip_address = true
    security_groups = [ aws_security_group.my_terraform_sg.id ]
  }

  placement {
    availability_zone = "us-east-1"
  }

  tag_specifications {
    resource_type = "instance"
    tags = {
        // appending a unique identifier method to the name
      Name = "TerraformServer-${uuid()}"
    }
  }
}
