security_groups.tf
# Define Security Group
resource "aws_security_group" "my_terraform_sg" {
  name        = "my_terraform_sg"
  description = "Security group for my VPC"
  vpc_id      = aws_vpc.my_vpc.id

  # Ingress rules
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["100.34.2.23/32"] // Allow SSH access from my IP only
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] // Allow HTTPS access from anywhere
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] // Allow HTTP access from anywhere
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] // 8080 for jenkins
  }

  # Egress rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Define Security Group
resource "aws_security_group" "my_rds_sg" {
  name        = "my_rds_sg"
  description = "Security group for my rds"
  vpc_id      = aws_vpc.my_vpc.id

  # Ingress rules
  ingress {
    from_port   = 3306 # mysql default port
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["100.34.2.23/32"] // Allow access only from my IP
  }

  # Egress rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
